Using a pure css loader to avoid running too much JS

--- a/packages/creepyface-site/src/scss/_button.scss
+++ b/packages/creepyface-site/src/scss/_button.scss
@@ -11,10 +11,6 @@
       text-decoration: none;
     }
   }
-  .loader {
-    width: 1.25em;
-    display: inline-block;
-  }
 }
 
 button,
