--- a/packages/creepyface-site/src/scss/_creepy-faces.scss
+++ b/packages/creepyface-site/src/scss/_creepy-faces.scss
@@ -35,7 +35,7 @@
         width: 100%;
       }
       .loader {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         bottom: $spacing / 4;
         right: $spacing / 4;
       }
